--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,9 +1,6 @@
--   repo: https://github.com/pre-commit/pre-commit
-    sha: v0.15.0
-    hooks:
-    -   id: validate_config
+repos:
 -   repo: https://github.com/pre-commit/pre-commit-hooks
-    sha: v1.1.1
+    rev: v1.2.3
     hooks:
     -   id: check-added-large-files
     -   id: check-ast
@@ -18,7 +15,7 @@
     -   id: requirements-txt-fixer
     -   id: trailing-whitespace
 -   repo: https://github.com/asottile/reorder_python_imports
-    sha: v0.3.5
+    rev: v1.0.1
     hooks:
     -   id: reorder-python-imports
         excludes: >
@@ -26,7 +23,7 @@
                 setup.py|
             )$
 -   repo: git://github.com/pre-commit/mirrors-yapf
-    sha: v0.19.0
+    rev: v0.21.0
     hooks:
     -   id: yapf
         args:
@@ -34,8 +31,7 @@
          - -i
          - -r
 -   repo: git://github.com/dnephin/pre-commit-golang
-    sha: 823c25f40e37d52765b6469de6df94c08e678784
+    rev: v0.3.2
     hooks:
     - id: go-fmt
-    - id: no-go-testing
     # - id: gometalinter  It's noisy
