Added sample tgz file

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@ extracted/
 flattened/
 sample/
 checksum.extracted.sha512
+!r9.4-sample/raw
+!r9.4-sample/raw/*
 
 r9.4-ecoli-loman/Ecoli_MinKNOW_1.4_RAD002_Sambrook.tar
 
