--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ sample/
 checksum.extracted.sha512
 !r9.4-sample/raw
 !r9.4-sample/raw/*
+.idea
 
 r9.4-ecoli-loman/Ecoli_MinKNOW_1.4_RAD002_Sambrook.tar
 
