--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+cytoolz==0.9.0.1
 grpcio==1.11.0
 grpcio-tools==1.11.0
 mypy-protobuf==1.3
@@ -8,4 +9,5 @@ pysam==0.14.1
 python-dateutil==2.7.2
 pytz==2018.4
 six==1.11.0
+toolz==0.9.0
 tqdm==4.23.1
