--- a/setup.cfg
+++ b/setup.cfg
@@ -6,3 +6,9 @@ no_spaces_around_selected_binary_operators="*,/"
 blank_line_before_nested_class_or_def=false
 coalesce_brackets=true
 indent_dictionary_value=true
+
+[bdist_wheel]
+universal = 0
+
+[metadata]
+license_file = LICENSE.md
