--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 cytoolz==0.9.0.1
+edlib==1.2.3.post1
 grpcio==1.11.0
 grpcio-tools==1.11.0
+h5py==2.7.1
 mypy-protobuf==1.3
 numpy==1.14.3
 pandas==0.22.0
