Added to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ dataset/
 checksum.extracted.sha512
 !r9.4-sample/raw
 !r9.4-sample/raw/*
+rwick_basecaller
 .idea
 
 r9.4-ecoli-loman/Ecoli_MinKNOW_1.4_RAD002_Sambrook.tar
